some CSS tweaks to improve page alignment issues

--- a/web/themes/rsd_district/css/style.css
+++ b/web/themes/rsd_district/css/style.css
@@ -1,5 +1,4 @@
 /** TESTING 123 **/
-
 /**
  * @file
  * Subtheme specific CSS.
@@ -1190,6 +1189,8 @@ body.user-logged-in .event:hover .ops-links {
 	border-radius: 0.625rem;
 	box-shadow: 0 7px 30px 0 rgba(0,0,0,0.05),0 4px 12px 0 rgba(0,0,0,0.1);
 	border: 1px solid rgba(0, 0, 0, 0.15) !important;
+	margin-right: 0px !important;
+	margin-left: 0px !important;
 }
 
 @media (max-width: 1199.98px) {
